# libpotassco

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
app/: CMakeLists.txt  lpconvert.cpp
potassco/: application.h  aspif.h  aspif_text.h  basic_types.h  bits.h  clingo.h  convert.h  enum.h  error.h  match_basic_types.h  platform.h  rule_utils.h  smodels.h  string_convert.h  theory_data.h
potassco/program_opts/: errors.h  intrusive_ptr.h  mapped_value.h  program_options.h  string_convert.h  typed_value.h  value.h  value_store.h
potassco/program_opts/detail/: notifier.h  refcountable.h  value_store.h
src/: CMakeLists.txt  application.cpp  aspif.cpp  aspif_text.cpp  clingo.cpp  convert.cpp  error.cpp  match_basic_types.cpp  program_options.cpp  rule_utils.cpp  smodels.cpp  string_convert.cpp  theory_data.cpp  value_store.cpp
tests/: CMakeLists.txt  main.cpp  test_application.cpp  test_aspif.cpp  test_common.h  test_error.cpp  test_options.cpp  test_smodels.cpp  test_string_convert.cpp  test_text.cpp  test_value.cpp
